Enhance shader generation app with server capture by default, integrate anchor-pki for SSL, and update README for OpenAI model changes. Implement pagination and preview screenshots in process API, and improve process handling in the UI.

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^9.1.2",
     "@types/better-sqlite3": "^7.6.13",
     "@types/uuid": "^10.0.0",
+    "anchor-pki": "^0.3.2",
     "better-sqlite3": "^11.10.0",
     "next": "15.3.4",
     "openai": "^5.6.0",
