Clean up repository for public release
- Remove sensitive debug logging of API keys
- Remove temporary files and build artifacts (tmp/, test files)
- Update .gitignore to prevent future sensitive data commits
- Add MIT license file
- Clean up README.md for public consumption
- Remove personal information and internal references

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,19 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-tmp
+
+# temporary files and cache
+tmp/
+*.log
+.cache/
+
+# database files
+*.db
+*.sqlite
+*.sqlite3
+
+# test files
+test*.js
+test*.ts
+!src/**/*.test.ts
+!src/**/*.test.js
